[package]
name = "cfg_table"
version = "1.0.0"
edition = "2018"
authors = ["William Venner <william@venner.io>"]
license = "MIT"
repository = "https://github.com/WilliamVenner/cfg_table"
description = "A simple macro that expands to different values across compilation targets"
categories = ["development-tools", "development-tools::ffi", "development-tools::build-utils"]
keywords = ["cfg", "table", "macro", "utility"]
